# gauss-aether

./: AGENT0_INTEGRATION.md  Cargo.toml  GAUSSCLAW_ROADMAP.md  LICENSE-APACHE  LICENSE-MIT  README.md  ROADMAP.md  SPECS.md  STRATEGY.md  deny.toml  rust-toolchain.toml
.github/workflows/: ci.yml  desktop-release.yml  poly-gate.yml
crates/gauss-attest/: Cargo.toml
crates/gauss-audit/: Cargo.toml
crates/gauss-audit/src/: anchor.rs  chain.rs  lib.rs  sign.rs  tsa.rs  verify.rs
crates/gauss-bench/: Cargo.toml
crates/gauss-canvas/src/: node.rs
crates/gauss-chaos/src/: lib.rs
crates/gauss-conformance/: Cargo.toml
crates/gauss-conformance/src/: lib.rs
crates/gauss-core/src/: action.rs  error.rs  lib.rs
crates/gauss-dp/: Cargo.toml
crates/gauss-gateway/src/: openai.rs  stream.rs
crates/gauss-health/: Cargo.toml
crates/gauss-health/src/: lib.rs
crates/gauss-hwca/src/: corpus.rs  schema_gate.rs  worker.rs
crates/gauss-kernel/: Cargo.toml
crates/gauss-kernel/src/: admit.rs  cap.rs  cluster.rs  lib.rs  sched.rs
crates/gauss-learnt/src/: lib.rs
crates/gauss-memory/: Cargo.toml
crates/gauss-memory/src/: klru.rs  lib.rs  schema.rs  snapshot.rs  surreal.rs
crates/gauss-poly/: Cargo.toml
crates/gauss-poly/src/: probe.rs  provider.rs
crates/gauss-provider/src/: lib.rs  toy.rs
crates/gauss-robust/src/: lib.rs
crates/gauss-sag/: Cargo.toml
crates/gauss-sag/src/: lib.rs  risk.rs
crates/gauss-sandbox/: Cargo.toml
crates/gauss-sandbox/src/: bwrap_layer.rs  lib.rs  noop.rs  seatbelt_layer.rs  seccomp_layer.rs  wasm.rs
crates/gauss-traits/src/: lib.rs
crates/gauss-tui/: Cargo.toml
crates/gauss-tui/src/: app.rs  main.rs  ui.rs
crates/gauss-turn/: Cargo.toml
crates/gauss-turn/src/: engine.rs  lib.rs
crates/gaussclaw-agent/: Cargo.toml
crates/gaussclaw-agent/src/: audit.rs  lib.rs
crates/gaussclaw-api-modes/: Cargo.toml
crates/gaussclaw-api-modes/src/: lib.rs
crates/gaussclaw-bin/: Cargo.toml
crates/gaussclaw-bin/src/: main.rs
crates/gaussclaw-channels/: Cargo.toml
crates/gaussclaw-channels/src/: lib.rs
crates/gaussclaw-cli/: Cargo.toml
crates/gaussclaw-cli/src/: lib.rs
crates/gaussclaw-config/: Cargo.toml
crates/gaussclaw-config/src/: lib.rs
crates/gaussclaw-conformance/: Cargo.toml
crates/gaussclaw-conformance/src/: cli_parity.rs  lib.rs  oai_sdk_parity.rs  polyhedral_provider.rs  replay_corpus.rs
crates/gaussclaw-conformance/src/snapshots/: gaussclaw_conformance__cli_parity__tests__gaussclaw_help.snap  gaussclaw_conformance__cli_parity__tests__subcommand_config_help.snap  gaussclaw_conformance__cli_parity__tests__subcommand_gateway_help.snap  gaussclaw_conformance__cli_parity__tests__subcommand_model_help.snap  gaussclaw_conformance__cli_parity__tests__subcommand_update_help.snap
crates/gaussclaw-desktop/: Cargo.toml  tauri.conf.json
crates/gaussclaw-desktop/src/: commands.rs  lib.rs  runtime.rs  state.rs
crates/gaussclaw-export/: Cargo.toml
crates/gaussclaw-export/src/: dpo.rs  envelope.rs  filter.rs  lib.rs  sft.rs  verify.rs
crates/gaussclaw-fed/: Cargo.toml
crates/gaussclaw-fed/src/: lib.rs  pool.rs
crates/gaussclaw-migrate/: Cargo.toml
crates/gaussclaw-migrate/src/: lib.rs
crates/gaussclaw-providers/: Cargo.toml
crates/gaussclaw-providers-meta/: Cargo.toml
crates/gaussclaw-providers-meta/src/: lib.rs  notdiamond.rs  openrouter.rs
crates/gaussclaw-providers/src/: anthropic.rs  catalogue.rs  cohere.rs  fallback.rs  google.rs  huggingface.rs  lib.rs  llama_cpp.rs  openai.rs  openai_compat.rs  postconditions.rs  replicate.rs  router.rs
crates/gaussclaw-skill/: Cargo.toml
crates/gaussclaw-skill/src/: lib.rs
crates/gaussclaw-store/: Cargo.toml
crates/gaussclaw-store/src/: lib.rs  store.rs  types.rs
crates/gaussclaw-surfaces/: Cargo.toml
crates/gaussclaw-surfaces/src/: lib.rs
crates/gaussclaw-tools/: Cargo.toml
crates/gaussclaw-tools/src/: base64_tool.rs  file_read.rs  file_write.rs  json_get.rs  lib.rs  math_eval.rs  regex_match.rs  shell.rs  spawners.rs
crates/gaussclaw-tui/: Cargo.toml
crates/gaussclaw-tui/src/: lib.rs
crates/gaussclaw-web/: Cargo.toml
crates/gaussclaw-web/src/: lib.rs
docs/: ARCHITECTURE.md  BUG_BOUNTY.md  CONTRIBUTING.md  HERMES_ADAPTER_MATRIX.md  OPENHARNESS_PARITY.md  QUICKSTART.md  SECURITY.md  SPRINT_ZEROCLAW_SOP.md  TUI.md  UPDATE_INTEGRITY.md
docs/adr/: 0001-axiom-driven-phasing.md  0002-tokio-async-runtime.md  0003-receipt-crypto-suite.md  0004-configuration-via-figment.md  0005-privilege-tiers-review-policy.md  0006-surrealdb-storage.md  0007-wal-barrier-semantics.md  0008-cap-token-in-gauss-core.md  0009-sandbox-stack-choices.md  0010-hwca-schema-gate.md  0011-receipt-chain-signatures.md  0012-klru-policy.md  0013-sag-decision-table.md  0014-poly-verifier.md  0015-canvas-widgetset.md  0016-attest-matrix.md  0017-mit-license-only.md
gauss-aether/: README.md  ROADMAP.md  SPECS.md
gauss-aether/crates/gauss-audit/: Cargo.toml
gauss-aether/crates/gauss-canvas/: Cargo.toml
gauss-aether/crates/gauss-chaos/: Cargo.toml
gauss-aether/crates/gauss-checkpoint/: Cargo.toml
gauss-aether/crates/gauss-conformance/: Cargo.toml
gauss-aether/crates/gauss-core/: Cargo.toml
gauss-aether/crates/gauss-cron/: Cargo.toml
gauss-aether/crates/gauss-curator/: Cargo.toml
gauss-aether/crates/gauss-exec/: Cargo.toml
gauss-aether/crates/gauss-gateway/: Cargo.toml
gauss-aether/crates/gauss-hooks/: Cargo.toml
gauss-aether/crates/gauss-hwca/: Cargo.toml
gauss-aether/crates/gauss-learnt/: Cargo.toml
gauss-aether/crates/gauss-memory/: Cargo.toml
gauss-aether/crates/gauss-provider/: Cargo.toml
gauss-aether/crates/gauss-robust/: Cargo.toml
gauss-aether/crates/gauss-rsi/: Cargo.toml
gauss-aether/crates/gauss-sop/: Cargo.toml
gaussclaw/: README.md  ROADMAP.md
scripts/desktop/: README.md  sign-linux.sh  sign-macos.sh  sign-windows.ps1
website/: .gitignore  README.md  docusaurus.config.js  package-lock.json  package.json  sidebars.js
website/docs/: architecture.md  cli.md  desktop.md  intro.md  migration.md  roadmap.md  tui.md  web.md
(+268 files in other folders)
