[workspace]
resolver = "2"
members = [
    "crates/gauss-core",
    "crates/gauss-traits",
    "crates/gauss-kernel",
    "crates/gauss-turn",
    "crates/gauss-memory",
    "crates/gauss-audit",
    "crates/gauss-provider",
    "crates/gauss-sandbox",
    "crates/gauss-hwca",
    "crates/gauss-sag",
    "crates/gauss-conformance",
]

[workspace.package]
version = "0.0.1"
edition = "2021"
rust-version = "1.83"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/rismanmattotorang/gauss-aether"
authors = ["Gauss-Aether Contributors"]

[workspace.dependencies]
# Internal crates (path deps for the local workspace)
gauss-core      = { path = "crates/gauss-core",      version = "0.0.1" }
gauss-traits    = { path = "crates/gauss-traits",    version = "0.0.1" }
gauss-kernel    = { path = "crates/gauss-kernel",    version = "0.0.1" }
gauss-turn      = { path = "crates/gauss-turn",      version = "0.0.1" }
gauss-memory    = { path = "crates/gauss-memory",    version = "0.0.1" }
gauss-audit     = { path = "crates/gauss-audit",     version = "0.0.1" }
gauss-provider  = { path = "crates/gauss-provider",  version = "0.0.1" }
gauss-sandbox   = { path = "crates/gauss-sandbox",   version = "0.0.1" }
gauss-hwca      = { path = "crates/gauss-hwca",      version = "0.0.1" }
gauss-sag       = { path = "crates/gauss-sag",       version = "0.0.1" }

# Async
async-trait = "0.1"
tokio       = { version = "1", default-features = false, features = ["sync", "rt", "macros", "time"] }

# Error handling
thiserror = "2"

# Serialization
serde      = { version = "1", features = ["derive"] }
serde_json = "1"

# Concurrency primitives
parking_lot = "0.12"

# Time / monotonic clocks
# (kept narrow on purpose to limit Phase-0 dep surface)

# Logging / tracing
tracing            = { version = "0.1", default-features = false, features = ["std"] }
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt", "env-filter"] }

# Hashing (chain link + record digest); deferred to gauss-audit
blake3 = "1"
sha2   = "0.10"

# Composite sandbox — Phase 3. The default WASM layer is wasmi (pure-Rust,
# fast compile, supports fuel metering). Phase 10 swaps to wasmtime for the
# production hardening profile; the trait surface is identical (ADR-0009).
wasmi       = { version = "0.46", default-features = false, features = ["std"] }
# Linux-only sandbox crates; the gauss-sandbox crate gates them by feature
# AND by `cfg(target_os = "linux")` so non-Linux builds skip them entirely.
landlock    = "0.4"
seccompiler = "0.5"

# JSON Schema 2020-12 — HWCA schema gate (Phase 4).
jsonschema = { version = "0.46", default-features = false }

# Ed25519 signatures — Phase 5. Pure Rust; pinned to the 2.x line for stable
# semver and Rust 1.83 MSRV. `rand_core` 0.6 matches dalek's expected RNG API.
ed25519-dalek = { version = "2.1", default-features = false, features = ["std", "rand_core", "zeroize"] }
rand_core     = { version = "0.6", default-features = false, features = ["std", "getrandom"] }
zeroize       = { version = "1.7", default-features = false }
hex           = { version = "0.4", default-features = false, features = ["std"] }

# Database — SurrealDB embedded.
# `default-features = false` + only `kv-mem` keeps the dep surface narrow and
# the cold-build cost bounded. Other backends (surrealkv, rocksdb, tikv) are
# additive crate features layered on in later phases.
surrealdb = { version = "2", default-features = false, features = ["kv-mem"] }

# Test-only
proptest = "1"

[workspace.lints.rust]
unsafe_code              = "forbid"
missing_docs             = "warn"
rust_2018_idioms         = { level = "warn", priority = -1 }
unreachable_pub          = "warn"
unused_must_use          = "deny"
single_use_lifetimes     = "warn"

[workspace.lints.clippy]
all                       = { level = "warn", priority = -1 }
pedantic                  = { level = "warn", priority = -1 }
nursery                   = { level = "warn", priority = -1 }
module_name_repetitions   = "allow"
missing_errors_doc        = "allow"
missing_panics_doc        = "allow"
must_use_candidate        = "allow"

# Strict overrides for high-performance kernel correctness:
mem_forget                = "deny"
arithmetic_side_effects   = "warn"
todo                      = "warn"
dbg_macro                 = "deny"
print_stdout              = "warn"
print_stderr              = "warn"

[profile.release]
codegen-units = 1
lto           = "thin"
strip         = "symbols"
panic         = "abort"

[profile.bench]
codegen-units = 1
lto           = "thin"
debug         = true
