[workspace]
resolver = "2"
members = [
    "crates/gauss-core",
    "crates/gauss-traits",
    "crates/gauss-kernel",
    "crates/gauss-turn",
    "crates/gauss-memory",
    "crates/gauss-audit",
    "crates/gauss-provider",
    "crates/gauss-sandbox",
    "crates/gauss-hwca",
    "crates/gauss-sag",
    "crates/gauss-poly",
    "crates/gauss-canvas",
    "crates/gauss-health",
    "crates/gauss-gateway",
    "crates/gauss-attest",
    "crates/gauss-chaos",
    "crates/gauss-bench",
    "crates/gauss-zk",
    "crates/gauss-dp",
    "crates/gauss-learnt",
    "crates/gauss-robust",
    "crates/gauss-conformance",

    # ── GaussClaw — Hermes-to-Rust port (see GAUSSCLAW_ROADMAP.md) ───────────
    "crates/gaussclaw-agent",
    "crates/gaussclaw-cli",
    "crates/gaussclaw-tui",
    "crates/gaussclaw-web",
    "crates/gaussclaw-desktop",
    "crates/gaussclaw-surfaces",
    "crates/gaussclaw-channels",
    "crates/gaussclaw-store",
    "crates/gaussclaw-skill",
    "crates/gaussclaw-tools",
    "crates/gaussclaw-providers",
    "crates/gaussclaw-providers-meta",
    "crates/gaussclaw-api-modes",
    "crates/gaussclaw-export",
    "crates/gaussclaw-fed",
    "crates/gaussclaw-config",
    "crates/gaussclaw-migrate",
    "crates/gaussclaw-conformance",
    "crates/gaussclaw-bin",
]

[workspace.package]
version = "0.0.1"
edition = "2021"
rust-version = "1.89"
license = "MIT"
repository = "https://github.com/rismanmattotorang/gauss-aether"
authors = ["Gauss-Aether Contributors"]

[workspace.dependencies]
# Internal crates (path deps for the local workspace)
gauss-core      = { path = "crates/gauss-core",      version = "0.0.1" }
gauss-traits    = { path = "crates/gauss-traits",    version = "0.0.1" }
gauss-kernel    = { path = "crates/gauss-kernel",    version = "0.0.1" }
gauss-turn      = { path = "crates/gauss-turn",      version = "0.0.1" }
gauss-memory    = { path = "crates/gauss-memory",    version = "0.0.1" }
gauss-audit     = { path = "crates/gauss-audit",     version = "0.0.1" }
gauss-provider  = { path = "crates/gauss-provider",  version = "0.0.1" }
gauss-sandbox   = { path = "crates/gauss-sandbox",   version = "0.0.1" }
gauss-hwca      = { path = "crates/gauss-hwca",      version = "0.0.1" }
gauss-sag       = { path = "crates/gauss-sag",       version = "0.0.1" }
gauss-poly      = { path = "crates/gauss-poly",      version = "0.0.1" }
gauss-canvas    = { path = "crates/gauss-canvas",    version = "0.0.1" }
gauss-health    = { path = "crates/gauss-health",    version = "0.0.1" }
gauss-gateway   = { path = "crates/gauss-gateway",   version = "0.0.1" }
gauss-attest    = { path = "crates/gauss-attest",    version = "0.0.1" }
gauss-chaos     = { path = "crates/gauss-chaos",     version = "0.0.1" }
gauss-bench     = { path = "crates/gauss-bench",     version = "0.0.1" }
gauss-zk        = { path = "crates/gauss-zk",        version = "0.0.1" }
gauss-dp        = { path = "crates/gauss-dp",        version = "0.0.1" }
gauss-learnt    = { path = "crates/gauss-learnt",    version = "0.0.1" }
gauss-robust    = { path = "crates/gauss-robust",    version = "0.0.1" }

# GaussClaw internal crates (Hermes port; see GAUSSCLAW_ROADMAP.md)
gaussclaw-agent          = { path = "crates/gaussclaw-agent",          version = "0.0.1" }
gaussclaw-cli            = { path = "crates/gaussclaw-cli",            version = "0.0.1" }
gaussclaw-tui            = { path = "crates/gaussclaw-tui",            version = "0.0.1" }
gaussclaw-web            = { path = "crates/gaussclaw-web",            version = "0.0.1" }
gaussclaw-desktop        = { path = "crates/gaussclaw-desktop",        version = "0.0.1" }
gaussclaw-surfaces       = { path = "crates/gaussclaw-surfaces",       version = "0.0.1" }
gaussclaw-channels       = { path = "crates/gaussclaw-channels",       version = "0.0.1" }
gaussclaw-store          = { path = "crates/gaussclaw-store",          version = "0.0.1" }
gaussclaw-skill          = { path = "crates/gaussclaw-skill",          version = "0.0.1" }
gaussclaw-tools          = { path = "crates/gaussclaw-tools",          version = "0.0.1" }
gaussclaw-providers      = { path = "crates/gaussclaw-providers",      version = "0.0.1" }
gaussclaw-providers-meta = { path = "crates/gaussclaw-providers-meta", version = "0.0.1" }
gaussclaw-api-modes      = { path = "crates/gaussclaw-api-modes",      version = "0.0.1" }
gaussclaw-export         = { path = "crates/gaussclaw-export",         version = "0.0.1" }
gaussclaw-fed            = { path = "crates/gaussclaw-fed",            version = "0.0.1" }
gaussclaw-config         = { path = "crates/gaussclaw-config",         version = "0.0.1" }
gaussclaw-migrate        = { path = "crates/gaussclaw-migrate",        version = "0.0.1" }
gaussclaw-conformance    = { path = "crates/gaussclaw-conformance",    version = "0.0.1" }

# Async
async-trait = "0.1"
tokio       = { version = "1", default-features = false, features = ["sync", "rt", "rt-multi-thread", "macros", "time", "io-util", "net", "signal"] }
futures     = { version = "0.3", default-features = false, features = ["std"] }
futures-util = { version = "0.3", default-features = false, features = ["std"] }

# CLI surface — Phase 1 (gaussclaw-cli, gaussclaw-bin)
clap   = { version = "4.5", default-features = false, features = ["std", "derive", "help", "usage", "error-context", "suggestions", "color", "wrap_help"] }
anyhow = "1"

# Config (TOML) — Phase 1 (gaussclaw-config)
figment = { version = "0.10", default-features = false, features = ["toml", "env"] }
toml    = { version = "0.8",  default-features = false, features = ["parse", "display"] }
directories = "5"

# TUI — Phase 1 (gaussclaw-tui)
ratatui      = { version = "0.29", default-features = false, features = ["crossterm"] }
crossterm    = { version = "0.28", default-features = false, features = ["bracketed-paste", "events"] }
tui-textarea = { version = "0.7",  default-features = false, features = ["crossterm", "ratatui"] }

# Web dashboard — Phase 1 (gaussclaw-web)
axum         = { version = "0.8", default-features = false, features = ["http1", "json", "query", "tokio", "ws", "macros"] }
tower        = { version = "0.5", default-features = false, features = ["util"] }
tower-http   = { version = "0.6", default-features = false, features = ["cors", "trace", "compression-br", "compression-gzip"] }
rust-embed   = { version = "8",   features = ["debug-embed"] }
mime_guess   = { version = "2",   default-features = false }
tracing-log  = { version = "0.2", default-features = false }

# Snapshot testing — used by gaussclaw-conformance for CLI / TUI parity
insta = { version = "1.40", default-features = false }

# Error handling
thiserror = "2"

# Serialization
serde      = { version = "1", features = ["derive"] }
serde_json = "1"

# Concurrency primitives
parking_lot = "0.12"

# Time / monotonic clocks
# (kept narrow on purpose to limit Phase-0 dep surface)

# Logging / tracing
tracing            = { version = "0.1", default-features = false, features = ["std"] }
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt", "env-filter"] }

# Hashing (chain link + record digest); deferred to gauss-audit
blake3 = "1"
sha2   = "0.10"
hmac   = "0.12"
subtle = "2"

# Time — real RFC3339 timestamps for audit records and channel messages.
time = { version = "0.3", default-features = false, features = ["std", "formatting", "macros"] }

# Composite sandbox — Phase 3. The default WASM layer is wasmi (pure-Rust,
# fast compile, supports fuel metering). Phase 10 swaps to wasmtime for the
# production hardening profile; the trait surface is identical (ADR-0009).
wasmi       = { version = "0.46", default-features = false, features = ["std"] }
# Linux-only sandbox crates; the gauss-sandbox crate gates them by feature
# AND by `cfg(target_os = "linux")` so non-Linux builds skip them entirely.
landlock    = "0.4"
seccompiler = "0.5"

# JSON Schema 2020-12 — HWCA schema gate (Phase 4).
jsonschema = { version = "0.46", default-features = false }

# Ed25519 signatures — Phase 5. Pure Rust; pinned to the 2.x line for stable
# semver and Rust 1.83 MSRV. `rand_core` 0.6 matches dalek's expected RNG API.
ed25519-dalek = { version = "2.1", default-features = false, features = ["std", "rand_core", "zeroize"] }
rand_core     = { version = "0.6", default-features = false, features = ["std", "getrandom"] }
zeroize       = { version = "1.7", default-features = false }
hex           = { version = "0.4", default-features = false, features = ["std"] }

# Database — SurrealDB embedded.
# `default-features = false` + only `kv-mem` keeps the dep surface narrow and
# the cold-build cost bounded. Other backends (surrealkv, rocksdb, tikv) are
# additive crate features layered on in later phases.
surrealdb = { version = "2", default-features = false, features = ["kv-mem"] }

# Test-only
proptest = "1"

[workspace.lints.rust]
unsafe_code              = "forbid"
missing_docs             = "warn"
rust_2018_idioms         = { level = "warn", priority = -1 }
unreachable_pub          = "warn"
unused_must_use          = "deny"
single_use_lifetimes     = "warn"

[workspace.lints.clippy]
all                       = { level = "warn", priority = -1 }
pedantic                  = { level = "warn", priority = -1 }
nursery                   = { level = "warn", priority = -1 }
module_name_repetitions   = "allow"
missing_errors_doc        = "allow"
missing_panics_doc        = "allow"
must_use_candidate        = "allow"

# Strict overrides for high-performance kernel correctness:
mem_forget                = "deny"
arithmetic_side_effects   = "warn"
todo                      = "warn"
dbg_macro                 = "deny"
print_stdout              = "warn"
print_stderr              = "warn"

[profile.release]
codegen-units = 1
lto           = "thin"
strip         = "symbols"
panic         = "abort"

[profile.bench]
codegen-units = 1
lto           = "thin"
debug         = true
