[workspace]
resolver = "2"
members = [
    "gauss-aether/crates/gauss-core",
    "gauss-aether/crates/gauss-traits",
    "gauss-aether/crates/gauss-kernel",
    "gauss-aether/crates/gauss-turn",
    "gauss-aether/crates/gauss-memory",
    "gauss-aether/crates/gauss-audit",
    "gauss-aether/crates/gauss-provider",
    "gauss-aether/crates/gauss-sandbox",
    "gauss-aether/crates/gauss-hwca",
    "gauss-aether/crates/gauss-sag",
    "gauss-aether/crates/gauss-poly",
    "gauss-aether/crates/gauss-canvas",
    "gauss-aether/crates/gauss-health",
    "gauss-aether/crates/gauss-gateway",
    "gauss-aether/crates/gauss-attest",
    "gauss-aether/crates/gauss-chaos",
    "gauss-aether/crates/gauss-bench",
    "gauss-aether/crates/gauss-zk",
    "gauss-aether/crates/gauss-dp",
    "gauss-aether/crates/gauss-learnt",
    "gauss-aether/crates/gauss-robust",
    "gauss-aether/crates/gauss-cron",
    "gauss-aether/crates/gauss-checkpoint",
    "gauss-aether/crates/gauss-curator",
    "gauss-aether/crates/gauss-rsi",
    "gauss-aether/crates/gauss-exec",
    "gauss-aether/crates/gauss-worktree",
    "gauss-aether/crates/gauss-conformance",
    "gauss-aether/crates/gauss-hooks",

    # ── GaussClaw — Hermes-to-Rust port (see gaussclaw/ROADMAP.md) ───────────
    "gaussclaw/crates/gaussclaw-agent",
    "gaussclaw/crates/gaussclaw-cli",
    "gaussclaw/crates/gaussclaw-tui",
    "gaussclaw/crates/gaussclaw-web",
    "gaussclaw/crates/gaussclaw-desktop",
    "gaussclaw/crates/gaussclaw-surfaces",
    "gaussclaw/crates/gaussclaw-channels",
    "gaussclaw/crates/gaussclaw-store",
    "gaussclaw/crates/gaussclaw-skill",
    "gaussclaw/crates/gaussclaw-tools",
    "gaussclaw/crates/gaussclaw-http",
    "gaussclaw/crates/gaussclaw-providers",
    "gaussclaw/crates/gaussclaw-providers-meta",
    "gaussclaw/crates/gaussclaw-api-modes",
    "gaussclaw/crates/gaussclaw-export",
    "gaussclaw/crates/gaussclaw-fed",
    "gaussclaw/crates/gaussclaw-config",
    "gaussclaw/crates/gaussclaw-migrate",
    "gaussclaw/crates/gaussclaw-plugins",
    "gaussclaw/crates/gaussclaw-redact",
    "gaussclaw/crates/gaussclaw-proxy",
    "gaussclaw/crates/gaussclaw-acp",
    "gaussclaw/crates/gaussclaw-lsp-client",
    "gaussclaw/crates/gaussclaw-kanban",
    "gaussclaw/crates/gaussclaw-conformance",
    "gaussclaw/crates/gaussclaw-bin",
]

[workspace.package]
version = "0.0.1"
edition = "2021"
rust-version = "1.89"
license = "MIT"
repository = "https://github.com/rismanmattotorang/gauss-aether"
authors = ["Gauss-Aether Contributors"]

[workspace.dependencies]
# Internal crates (path deps for the local workspace)
gauss-core      = { path = "gauss-aether/crates/gauss-core",      version = "0.0.1" }
gauss-traits    = { path = "gauss-aether/crates/gauss-traits",    version = "0.0.1" }
gauss-kernel    = { path = "gauss-aether/crates/gauss-kernel",    version = "0.0.1" }
gauss-turn      = { path = "gauss-aether/crates/gauss-turn",      version = "0.0.1" }
gauss-memory    = { path = "gauss-aether/crates/gauss-memory",    version = "0.0.1" }
gauss-audit     = { path = "gauss-aether/crates/gauss-audit",     version = "0.0.1" }
gauss-provider  = { path = "gauss-aether/crates/gauss-provider",  version = "0.0.1" }
gauss-sandbox   = { path = "gauss-aether/crates/gauss-sandbox",   version = "0.0.1" }
gauss-hwca      = { path = "gauss-aether/crates/gauss-hwca",      version = "0.0.1" }
gauss-sag       = { path = "gauss-aether/crates/gauss-sag",       version = "0.0.1" }
gauss-poly      = { path = "gauss-aether/crates/gauss-poly",      version = "0.0.1" }
gauss-canvas    = { path = "gauss-aether/crates/gauss-canvas",    version = "0.0.1" }
gauss-health    = { path = "gauss-aether/crates/gauss-health",    version = "0.0.1" }
gauss-gateway   = { path = "gauss-aether/crates/gauss-gateway",   version = "0.0.1" }
gauss-attest    = { path = "gauss-aether/crates/gauss-attest",    version = "0.0.1" }
gauss-chaos     = { path = "gauss-aether/crates/gauss-chaos",     version = "0.0.1" }
gauss-bench     = { path = "gauss-aether/crates/gauss-bench",     version = "0.0.1" }
gauss-zk        = { path = "gauss-aether/crates/gauss-zk",        version = "0.0.1" }
gauss-dp        = { path = "gauss-aether/crates/gauss-dp",        version = "0.0.1" }
gauss-learnt    = { path = "gauss-aether/crates/gauss-learnt",    version = "0.0.1" }
gauss-robust    = { path = "gauss-aether/crates/gauss-robust",    version = "0.0.1" }
gauss-cron      = { path = "gauss-aether/crates/gauss-cron",      version = "0.0.1" }
gauss-checkpoint = { path = "gauss-aether/crates/gauss-checkpoint", version = "0.0.1" }
gauss-curator    = { path = "gauss-aether/crates/gauss-curator",    version = "0.0.1" }
gauss-rsi        = { path = "gauss-aether/crates/gauss-rsi",        version = "0.0.1" }
gauss-exec       = { path = "gauss-aether/crates/gauss-exec",       version = "0.0.1" }
gauss-worktree   = { path = "gauss-aether/crates/gauss-worktree",   version = "0.0.1" }
gauss-hooks      = { path = "gauss-aether/crates/gauss-hooks",      version = "0.0.1" }

# GaussClaw internal crates (Hermes port; see gaussclaw/ROADMAP.md)
gaussclaw-agent          = { path = "gaussclaw/crates/gaussclaw-agent",          version = "0.0.1" }
gaussclaw-cli            = { path = "gaussclaw/crates/gaussclaw-cli",            version = "0.0.1" }
gaussclaw-tui            = { path = "gaussclaw/crates/gaussclaw-tui",            version = "0.0.1" }
gaussclaw-web            = { path = "gaussclaw/crates/gaussclaw-web",            version = "0.0.1" }
gaussclaw-desktop        = { path = "gaussclaw/crates/gaussclaw-desktop",        version = "0.0.1" }
gaussclaw-surfaces       = { path = "gaussclaw/crates/gaussclaw-surfaces",       version = "0.0.1" }
gaussclaw-channels       = { path = "gaussclaw/crates/gaussclaw-channels",       version = "0.0.1" }
gaussclaw-store          = { path = "gaussclaw/crates/gaussclaw-store",          version = "0.0.1" }
gaussclaw-skill          = { path = "gaussclaw/crates/gaussclaw-skill",          version = "0.0.1" }
gaussclaw-tools          = { path = "gaussclaw/crates/gaussclaw-tools",          version = "0.0.1" }
gaussclaw-http           = { path = "gaussclaw/crates/gaussclaw-http",           version = "0.0.1" }
gaussclaw-providers      = { path = "gaussclaw/crates/gaussclaw-providers",      version = "0.0.1" }
gaussclaw-providers-meta = { path = "gaussclaw/crates/gaussclaw-providers-meta", version = "0.0.1" }
gaussclaw-api-modes      = { path = "gaussclaw/crates/gaussclaw-api-modes",      version = "0.0.1" }
gaussclaw-export         = { path = "gaussclaw/crates/gaussclaw-export",         version = "0.0.1" }
gaussclaw-fed            = { path = "gaussclaw/crates/gaussclaw-fed",            version = "0.0.1" }
gaussclaw-config         = { path = "gaussclaw/crates/gaussclaw-config",         version = "0.0.1" }
gaussclaw-migrate        = { path = "gaussclaw/crates/gaussclaw-migrate",        version = "0.0.1" }
gaussclaw-plugins        = { path = "gaussclaw/crates/gaussclaw-plugins",        version = "0.0.1" }
gaussclaw-redact         = { path = "gaussclaw/crates/gaussclaw-redact",         version = "0.0.1" }
gaussclaw-proxy          = { path = "gaussclaw/crates/gaussclaw-proxy",          version = "0.0.1" }
gaussclaw-acp            = { path = "gaussclaw/crates/gaussclaw-acp",            version = "0.0.1" }
gaussclaw-lsp-client     = { path = "gaussclaw/crates/gaussclaw-lsp-client",     version = "0.0.1" }
gaussclaw-kanban         = { path = "gaussclaw/crates/gaussclaw-kanban",         version = "0.0.1" }
gaussclaw-conformance    = { path = "gaussclaw/crates/gaussclaw-conformance",    version = "0.0.1" }

# Async
async-trait = "0.1"
tokio       = { version = "1", default-features = false, features = ["sync", "rt", "rt-multi-thread", "macros", "time", "io-util", "net", "signal"] }
futures     = { version = "0.3", default-features = false, features = ["std"] }
futures-util = { version = "0.3", default-features = false, features = ["std"] }

# HTTP client — Sprint 10 §1 (gaussclaw-http)
# rustls + rustls-native-certs keeps OpenSSL out of the dep tree;
# `json` enables the convenience codec used by HttpMcpClient.
reqwest  = { version = "0.13", default-features = false, features = ["rustls", "rustls-native-certs", "json"] }
wiremock = { version = "0.6", default-features = false }

# CLI surface — Phase 1 (gaussclaw-cli, gaussclaw-bin)
clap   = { version = "4.5", default-features = false, features = ["std", "derive", "help", "usage", "error-context", "suggestions", "color", "wrap_help"] }
anyhow = "1"

# Config (TOML) — Phase 1 (gaussclaw-config)
figment = { version = "0.10", default-features = false, features = ["toml", "env"] }
toml    = { version = "0.8",  default-features = false, features = ["parse", "display"] }
directories = "5"

# TUI — Phase 1 (gaussclaw-tui)
ratatui      = { version = "0.29", default-features = false, features = ["crossterm"] }
crossterm    = { version = "0.28", default-features = false, features = ["bracketed-paste", "events"] }
tui-textarea = { version = "0.7",  default-features = false, features = ["crossterm", "ratatui"] }

# Web dashboard — Phase 1 (gaussclaw-web)
axum         = { version = "0.8", default-features = false, features = ["http1", "json", "query", "tokio", "ws", "macros"] }
tower        = { version = "0.5", default-features = false, features = ["util"] }
tower-http   = { version = "0.6", default-features = false, features = ["cors", "trace", "compression-br", "compression-gzip"] }
rust-embed   = { version = "8",   features = ["debug-embed"] }
mime_guess   = { version = "2",   default-features = false }
tracing-log  = { version = "0.2", default-features = false }

# Snapshot testing — used by gaussclaw-conformance for CLI / TUI parity
insta = { version = "1.40", default-features = false }

# Error handling
thiserror = "2"

# Serialization
serde      = { version = "1", features = ["derive"] }
serde_json = "1"

# Concurrency primitives
parking_lot = "0.12"

# Time / monotonic clocks
# (kept narrow on purpose to limit Phase-0 dep surface)

# Logging / tracing
tracing            = { version = "0.1", default-features = false, features = ["std"] }
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt", "env-filter"] }

# Hashing (chain link + record digest); deferred to gauss-audit
blake3 = "1"
sha1   = "0.10"
sha2   = "0.10"
hmac   = "0.12"
subtle = "2"

# Tool catalogue helpers (Phase 3)
base64 = { version = "0.22", default-features = false, features = ["std"] }
regex  = { version = "1",    default-features = false, features = ["std", "perf"] }

# Time — real RFC3339 timestamps for audit records and channel messages.
time = { version = "0.3", default-features = false, features = ["std", "formatting", "macros"] }

# Filesystem test fixtures — used by gauss-checkpoint to drive
# round-trip tests against a fresh working directory each run.
tempfile = "3"

# Composite sandbox — Phase 3. The default WASM layer is wasmi (pure-Rust,
# fast compile, supports fuel metering). Phase 10 swaps to wasmtime for the
# production hardening profile; the trait surface is identical (ADR-0009).
wasmi       = { version = "0.46", default-features = false, features = ["std"] }
# Linux-only sandbox crates; the gauss-sandbox crate gates them by feature
# AND by `cfg(target_os = "linux")` so non-Linux builds skip them entirely.
landlock    = "0.4"
seccompiler = "0.5"

# JSON Schema 2020-12 — HWCA schema gate (Phase 4).
jsonschema = { version = "0.46", default-features = false }

# Ed25519 signatures — Phase 5. Pure Rust; pinned to the 2.x line for stable
# semver and Rust 1.83 MSRV. `rand_core` 0.6 matches dalek's expected RNG API.
ed25519-dalek = { version = "2.1", default-features = false, features = ["std", "rand_core", "zeroize"] }
rand_core     = { version = "0.6", default-features = false, features = ["std", "getrandom"] }
zeroize       = { version = "1.7", default-features = false }
hex           = { version = "0.4", default-features = false, features = ["std"] }

# Database — SurrealDB embedded.
# `default-features = false` + only `kv-mem` keeps the dep surface narrow and
# the cold-build cost bounded. Other backends (surrealkv, rocksdb, tikv) are
# additive crate features layered on in later phases.
surrealdb = { version = "2", default-features = false, features = ["kv-mem"] }

# Test-only
proptest = "1"

[workspace.lints.rust]
unsafe_code              = "forbid"
missing_docs             = "warn"
rust_2018_idioms         = { level = "warn", priority = -1 }
unreachable_pub          = "warn"
unused_must_use          = "deny"
single_use_lifetimes     = "warn"

[workspace.lints.clippy]
all                       = { level = "warn", priority = -1 }
pedantic                  = { level = "warn", priority = -1 }
nursery                   = { level = "warn", priority = -1 }
module_name_repetitions   = "allow"
missing_errors_doc        = "allow"
missing_panics_doc        = "allow"
must_use_candidate        = "allow"

# Strict overrides for high-performance kernel correctness:
mem_forget                = "deny"
arithmetic_side_effects   = "warn"
todo                      = "warn"
dbg_macro                 = "deny"
print_stdout              = "warn"
print_stderr              = "warn"

[profile.release]
codegen-units = 1
lto           = "thin"
strip         = "symbols"
panic         = "abort"

[profile.bench]
codegen-units = 1
lto           = "thin"
debug         = true
