[package]
name        = "gauss-audit"
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
repository.workspace   = true
authors.workspace      = true
description = "Cryptographic Receipt Chain — append-only audit log over signed receipts."

[lints]
workspace = true

[dependencies]
gauss-core = { workspace = true }
sha2       = { workspace = true }
serde      = { workspace = true }
thiserror  = { workspace = true }
tracing    = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
