[package]
name        = "gauss-bench"
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
repository.workspace   = true
authors.workspace      = true
description = "Pareto-dominance scorecard + microbenchmarks for the 1.0 release (Phase 11)."

[lints]
workspace = true

[dependencies]
gauss-core   = { workspace = true }
serde        = { workspace = true }
serde_json   = { workspace = true }
thiserror    = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt", "rt-multi-thread"] }
