[package]
name        = "gauss-conformance"
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
repository.workspace   = true
authors.workspace      = true
description = "Conformance test harness — axiom A1-A9 + theorem T1-T12 scenarios."
publish     = false

[lints]
workspace = true

[dependencies]
gauss-core     = { workspace = true }
gauss-traits   = { workspace = true }
gauss-kernel   = { workspace = true }
gauss-turn     = { workspace = true }
gauss-memory   = { workspace = true }
gauss-audit    = { workspace = true }
gauss-provider = { workspace = true }
gauss-sandbox  = { workspace = true }
serde_json     = { workspace = true }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
