[package]
name        = "gauss-conformance"
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
repository.workspace   = true
authors.workspace      = true
description = "Conformance test harness — axiom A1-A9 + theorem T1-T12 scenarios."
publish     = false

[lints]
workspace = true

[dependencies]
gauss-core     = { workspace = true }
gauss-traits   = { workspace = true }
gauss-kernel   = { workspace = true }
gauss-turn     = { workspace = true }
gauss-memory   = { workspace = true }
gauss-audit    = { workspace = true }
gauss-provider = { workspace = true }
gauss-sandbox  = { workspace = true }
gauss-hwca     = { workspace = true }
gauss-sag      = { workspace = true }
gauss-poly     = { workspace = true }
gauss-canvas   = { workspace = true }
gauss-health   = { workspace = true }
gauss-gateway  = { workspace = true }
gauss-attest   = { workspace = true }
gauss-chaos    = { workspace = true }
async-trait    = { workspace = true }
serde_json     = { workspace = true }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread", "test-util", "time"] }
