[package]
name        = "gauss-poly"
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
repository.workspace   = true
authors.workspace      = true
description = "Polyhedral trait-equivalence verifier — proves swap-compatible provider implementations agree on observable outputs (Theorem T7)."

[lints]
workspace = true

[dependencies]
gauss-core     = { workspace = true }
gauss-traits   = { workspace = true }
async-trait    = { workspace = true }
serde          = { workspace = true }
serde_json     = { workspace = true }
thiserror      = { workspace = true }
tokio          = { workspace = true, features = ["sync"] }
tracing        = { workspace = true }

[dev-dependencies]
gauss-provider = { workspace = true }
tokio          = { workspace = true, features = ["macros", "rt", "rt-multi-thread"] }
