[package]
name        = "gauss-sag"
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
repository.workspace   = true
authors.workspace      = true
description = "Supervised Autonomy Gradient — risk classifier + approval queue for tool actions."

[lints]
workspace = true

[dependencies]
gauss-core   = { workspace = true }
async-trait  = { workspace = true }
serde        = { workspace = true }
serde_json   = { workspace = true }
thiserror    = { workspace = true }
tokio        = { workspace = true, features = ["sync", "time"] }
tracing      = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt", "rt-multi-thread", "time", "test-util"] }
