[package]
name        = "gauss-tui"
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
repository.workspace   = true
authors.workspace      = true
description = "Ratatui-based admin TUI for Gauss-Aether — monitor, configure, approve."

[lints]
workspace = true

[[bin]]
name = "gauss-tui"
path = "src/main.rs"

[dependencies]
gauss-attest   = { workspace = true }
gauss-audit    = { workspace = true }
gauss-bench    = { workspace = true }
gauss-canvas   = { workspace = true }
gauss-chaos    = { workspace = true }
gauss-core     = { workspace = true }
gauss-gateway  = { workspace = true }
gauss-health   = { workspace = true }
gauss-hwca     = { workspace = true }
gauss-kernel   = { workspace = true }
gauss-memory   = { workspace = true }
gauss-poly     = { workspace = true }
gauss-provider = { workspace = true }
gauss-sag      = { workspace = true }
gauss-sandbox  = { workspace = true }
gauss-traits   = { workspace = true }
gauss-turn     = { workspace = true }

async-trait    = { workspace = true }
serde          = { workspace = true }
serde_json     = { workspace = true }
hex            = { workspace = true }
tokio          = { workspace = true, features = ["macros", "rt-multi-thread", "sync", "time", "signal"] }
tracing        = { workspace = true }

ratatui        = { workspace = true }
crossterm      = { workspace = true }
